# cadmium-web-extension

./: Instructions.docx  README.md
example/geography-model/: CMakeLists.txt  main.cpp
example/geography-model/logs/: geography_model_outputs.txt  geography_model_state.txt
example/geography-model/model/cells/: sir.hpp
example/geography-model/results/: structure.json  style.json  visualization.json
example/spatial-sir/: main.cpp  makefile
example/spatial-sir/input/: config.json
example/spatial-sir/model/: sir_coupled.hpp  state.hpp  vicinity.hpp
example/spatial-sir/model/cells/: sir_cell.hpp
include/web/: web_ie_stream.hpp  web_irregular.hpp  web_logger.hpp  web_model.hpp  web_ports.hpp  web_results.hpp  web_tools.hpp
include/web/output/: int_coupling.hpp  message_type.hpp  messages.hpp  metadata.hpp  model_type.hpp  port.hpp  structure.hpp  submodel.hpp
